# quast

./: .dockerignore  .gitignore  CHANGES  CHANGES.txt  CODING_GUIDELINES.md  Dockerfile  INSTALL  INSTALL.txt  Illustration.pxm  LICENSE  LICENSE.txt  MANIFEST.in  README  README.md  README.txt  README_VIRALQUAST.md  TODO  VERSION.txt  clean.sh  contigs_10k_1_genes.gff  filter_genes.py  full_install.sh  httpd.conf  icarus.py  index.html  install.sh  install_full.sh  make-tar.sh  make_tar.sh  manual.html  metaquast.py  quality.py  quast-lg.py  quast.py  quast_ref.bib  run_Ecoli.sh  run_Saureus.sh  run_on_a_project.py  run_on_project.py  run_test.sh  (+2 more)
quast_libs/gnuplot/: BUGS  ChangeLog  CodeStyle  GNUmakefile  INSTALL  Makefile.am  Makefile.in  Makefile.maint  NEWS  PGPKEYS  PORTING  README  RELEASE_NOTES  TODO  aclocal.m4  config.hin  configure  configure.in  configure.vms  missing
quast_libs/gnuplot/config/: Makefile.am  Makefile.am.in  Makefile.in  README  buildvms.com  config.cyg  config.dj2  config.mgw  config.nt  config.os2  config.oww  config.wc  djconfig.sh  make_vms.com  makefile.cyg  makefile.dj2  makefile.emx  makefile.g  makefile.os2  makefile.vms  makefile.wc
quast_libs/gnuplot/config/MacOSX/: ReadMe.rtf  createdist.sh  gnuplot.packproj
quast_libs/gnuplot/config/cygwin/: Makefile
quast_libs/gnuplot/config/mingw/: Makefile
quast_libs/gnuplot/config/msvc/: Makefile
quast_libs/gnuplot/config/watcom/: Makefile  config.h
quast_libs/gnuplot/demo/: GM1_bonds.r3d  Makefile.am  Makefile.am.in  Makefile.in  airfoil.dem  all.dem  animate.dem  animate2.dem  approximate.dem  arrowstyle.dem  autoscale.dem  barchart_art.dem  binary.dem  bivariat.dem  blutux.rgb  bolditalic.dem  borders.dem  boxplot.dem  callargs.dem  candlesticks.dem  cerf.dem  charset.dem  circles.dem  cities.dem  clipobject.dem  colorscheme.dem  colorwheel.dem  complex_trig.dem  contours.dem  controls.dem  dashcolor.dem  dashtypes.dem  datastrings.dem  demo.edf  density.fnc  dgrid3d.dem  discrete.dem  electron.dem  ellipse.dem  ellipses_style.dem  (+100 more)
quast_libs/gnuplot/demo/html/: Makefile  Makefile.canvas  canvas_utf8.dem  gnuplot_demo.css  index.canvas  index.save  linkedaxes.patch  mouseable.dem  mousebox.template  webify.pl  webify_canvas.pl  webify_svg.pl
quast_libs/gnuplot/demo/plugin/: Makefile.am  Makefile.in  demo_plugin.c  gnuplot_plugin.h  plugin.dem
quast_libs/gnuplot/docs/: Makefile.am  Makefile.in  README  README.ja  checkdoc.c  doc2gih.c  doc2hlp.c  doc2ipf.c  doc2ms.c  doc2rnh.c  doc2rtf.c  doc2tex.c  doc2texi.el  doc2x.h  faq-ja.tex  gnuplot-ja.doc  gnuplot.doc  gpcard.tex  makefile.dst  plotstyles.gnu  term-ja.diff  termdoc.c  titlepag.ipf  titlepag.ms  titlepag.tex  toc_entr.sty  xref.c  xref.h
quast_libs/gnuplot/docs/psdoc/: Makefile  README  ps_file.doc  ps_fontfile_doc.tex  ps_guide.ps  ps_symbols.gpi
quast_libs/gnuplot/docs/windows/: doc2html.c  wgnuplot.hhp  wgnuplot.stp
quast_libs/gnuplot/m4/: Makefile.am  Makefile.am.in  Makefile.in  alpha.m4  apple.m4  beos.m4  msdos.m4  next.m4  pkg.m4
quast_libs/gnuplot/man/: Makefile.am  Makefile.in  gnuplot-ja.1  gnuplot.1
quast_libs/gnuplot/pm3d/: README
quast_libs/gnuplot/pm3d/contrib/: README  colorpts-demo.gp  colorpts.awk  pm3dCompress.awk  pm3dConvertToImage.awk
quast_libs/gnuplot/share/: Gnuplot.app-defaults  Makefile.am  Makefile.in  colors_default.gp  colors_mono.gp  colors_podo.gp  gnuplotrc
quast_libs/gnuplot/share/LaTeX/: Makefile.am  Makefile.in  README  gnuplot-lua-tikz-common.tex  gnuplot-lua-tikz.sty  gnuplot-lua-tikz.tex  gnuplot.cfg  t-gnuplot-lua-tikz.tex
quast_libs/gnuplot/src/: GNUmakefile  Makefile.am  Makefile.in  Makefile.maint  alloc.c  alloc.h  axis.c  axis.h  bf_test.c  bitmap.c  bitmap.h  boundary.c  boundary.h  breaders.c  breaders.h  color.c  color.h  command.c  command.h  contour.c  contour.h  datablock.c  datablock.h  datafile.c  datafile.h  dynarray.c  dynarray.h  eval.c  eval.h  external.c  external.h  fit.c  fit.h  gadgets.c  gadgets.h  genopt.com  getcolor.c  getcolor.h  gnuplot.opt  gp_hist.h  (+83 more)
quast_libs/gnuplot/src/NeXT/: Controller.h  Controller.m  GnuTerm.iconheader  GnuTerm.tiff  GnuTerm_main.m  GnuView.h  GnuView.m  Makefile  Makefile.preamble  PB.project  README.rtf  bigger.tiff  gnuviewController.h  gnuviewController.m
quast_libs/gnuplot/src/OpenStep/: Controller.h  Controller.m  GnuTerm_main.m  GnuView.h  GnuView.m  GnuViewController.h  GnuViewController.m  Makefile  Makefile.postamble  PB.project  TODO
quast_libs/gnuplot/src/beos/: GPApp.cpp  GPApp.h  GPBitmap.cpp  GPBitmap.h  GPView.cpp  GPView.h  GPWindow.cpp  GPWindow.h  Makefile.in  XStringList.cpp  XStringList.h  constants.h
quast_libs/gnuplot/src/os2/: 4allterm.cmd  dialogs.c  dialogs.h  gclient.c  gnupmdrv.c  gnupmdrv.def  gnupmdrv.h  gnupmdrv.ipf  gnupmdrv.rc  pm_msgs.h  print.c  ptrcross.ptr  rotating.ptr  scaling.ptr
quast_libs/gnuplot/src/qtterminal/: Makefile.am  Makefile.in  QtGnuplot.pro  QtGnuplotApplication.cpp  QtGnuplotApplication.h  QtGnuplotEvent.cpp  QtGnuplotEvent.h  QtGnuplotInstance.cpp  QtGnuplotInstance.h  QtGnuplotItems.cpp  QtGnuplotItems.h  QtGnuplotResource.qrc  QtGnuplotScene.cpp  QtGnuplotScene.h  QtGnuplotSettings.ui  QtGnuplotWidget.cpp  QtGnuplotWidget.h  QtGnuplotWindow.cpp  QtGnuplotWindow.h  README.Qt  embed_example.cpp  (+5 more)
quast_libs/gnuplot/term/: Makefile.am  Makefile.am.in  Makefile.in  README  ai.trm  aquaterm.trm  be.trm  caca.trm  cairo.trm  canvas.trm  cgm.trm  context.trm  corel.trm  debug.trm  djsvga.trm  driver.h  dumb.trm  dxf.trm  dxy.trm  eepic.trm  emf.trm  emxvga.trm  epson.trm  estimate.trm  excl.trm  fig.trm  gd.trm  ggi.trm  gpic.trm  grass.trm  hp26.trm  hp2648.trm  hp500c.trm  hpgl.trm  hpljii.trm  hppj.trm  imagen.trm  impcodes.h  kyo.trm  latex.trm  (+34 more)
quast_libs/gnuplot/tutorial/: Makefile.am  Makefile.am.in  Makefile.in  eg1.plt  eg2.plt  eg3.plt  eg4.plt  eg5.plt  eg6.plt  eg7.plt  header.tex  linepoin.plt  makefile.dst  test.plt  test_tikz.plt  tutorial.tex
quast_libs/gnuplot/win/: Copyright-ja.txt  README-Windows-ja.txt  README-Windows.txt  gnuplot.iss
(+1925 files in other folders)
