## Process this file with automake to produce Makefile.in -*-Makefile-*-
AUTOMAKE_OPTIONS = foreign

# here are listed all the qtterminal files that go to the distribution
EXTRA_DIST = qt_term.h qt_conversion.cpp QtGnuplot.pro QtGnuplotWindow.h \
QtGnuplotApplication.h QtGnuplotWidget.h QtGnuplotScene.h QtGnuplotEvent.h \
QtGnuplotItems.h QtGnuplotSettings.ui QtGnuplotResource.qrc \
QtGnuplotInstance.cpp QtGnuplotInstance.h gnuplot_qt.cpp \
README.Qt embed_example.cpp embed_example.h \
images po
